# ifucube

./: .gitignore  .travis.yml  CHANGES.rst  README.md  ifucube.py  runme.py  setup.cfg  setup.py
ifucube/: __init__.py  ifucube.py  ifucubelist.py  wavelength.py
ifucube/tests/: test_loading.py
tests/: test.py
