[metadata]
name = ifucube
package_name = ifucube
provides = ifucube
author = Craig Jones
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
description = Data analysis package for cubes.
long_description = file: README.md
url = https://github.com/brechmos-stsci/ifucube
github_project = brechmos-stsci/ifucube

[options]
packages = find:
zip_safe = False
python_requires = >=3.6
include_package_data = True
setup_requires = setuptools_scm
install_requires =
    astropy>=3.1

[options.entry_points]
#gui_scripts =
#    ifucube = ifucube.ifucube:main
#glue.plugins =
#    ifucube = ifucube.ifucube:setup

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
testpaths = "ifucube" "docs"
norecursedirs = docs/_build
doctest_plus = enabled
addopts = -p no:warnings -p no:logging

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py
